# edge_alignment

./: CMakeLists.txt  README.md  package.xml
include/: ConcurrentQueue.h  EAResidue.h  Frame.h  Queue.h  SolveEA.h
src/: Frame.cpp  SolveEA.cpp  ea.cpp
standalone/: CMakeLists.txt  PoseManipUtils.cpp  PoseManipUtils.h  README.md  hello.cpp  standalone_edge_align.cpp  utils.cpp  utils.h
